# thumbnail-api

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  functions.sh  log_conf.yaml  pyproject.toml
app/: __init__.py  conftest.py  exceptions.py
app/adapters/: __init__.py  handler.py
app/cmd/: __init__.py  handler.py  middleware.py  test_app.py
app/domain/: __init__.py  create_thumbnail.py
app/domain/interactions/: __init__.py  check_job_status.py  download_thumbnail.py  get_all_job_ids.py  test_upload_image.py  upload_image.py
app/models/: __init__.py  upload_image.py
app/specifications/: upload_image.py
app/srv/: __init__.py  events.py  handler.py  handlers.py  middleware.py  routes.py  worker_monitor.py
app/srv/models/: __init__.py  all_jobs.py  error_response.py  job_status.py  upload_image.py
app/task_queue/: __init__.py  broker.py  task_broker.py  task_store.py  worker.py
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
helm-chart/templates/tests/: test-connection.yaml
tests/: conftest.py  exceptions.py  test_app.py
tests/assets/: 0c895999-7a69-4770-b116-7eff01a57b99  not_an_image.txt
tests/domain/: test_create_thumbnail.py
tests/domain/interactions/: conftest.py  test_check_job_status.py  test_download_thumbnail.py  (+2 more)
tests/specifications/: __init__.py  check_job_status.py  download_thumbnail.py  get_all_job_ids.py  upload_image.py
tests/srv/: test_events.py  test_worker_monitor.py
tests/task_queue/: stubbed_task_store.py  test_broker.py
(+5 files in other folders)
